--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://nyanpunch.github.io/Project Portfolio",
+  "homepage": "http://nyanpunch.github.io/",
   "name": "portfolio",
   "private": true,
   "version": "0.0.0",
